--- a/index.html
+++ b/index.html
@@ -9,22 +9,29 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
 
-  <link href="https://fonts.googleapis.com/css?family=Pangolin" rel="stylesheet">
-  <!-- <link rel="stylesheet" type="text/css" href="assets/css/style.css"> -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 </head>
 <body>
+    <div class="container-fluid">
+      <div class="row justify-content-center">
 
-    <div id="buttons"></div>
+        <div class="col-12 col-md-3">
+          <div id="buttons"></div>
+          <form class="form-inline">
+            <div class="form-group  mb-2">
+              <input id="addButtonField" type="text" class="form-control" placeholder="Add animal">
+            </div>
+            <button id="addButton" class="btn btn-primary mb-2" type="submit">+</button>
+          </form>
+      </div>
 
-    <form>
-      <input id="addButtonField" type="text" >
-      <input id="addButton" value="Add Animal" type="submit">
-    </form>
-
-    <div id="images"></div>
-
-
+          <div id="images" class="col-12 col-lg-8">
+          
+          </div>
+      </div>
+    </div>
 
   <script src="assets/javascript/app.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
